--- a/Challenge3/index.html
+++ b/Challenge3/index.html
@@ -1,12 +1,190 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
+
 <body>
-  
+
+
+    <div class="container">
+
+        <div class="card card-first">
+
+            <div class="card-header" >
+                <svg width="350" height="140" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <defs>
+                        <linearGradient x1="50%" y1=".779%" x2="50%" y2="100%" id="c">
+                            <stop stop-color="#0989B4" stop-opacity="0" offset="0%" />
+                            <stop stop-color="#53FFEE" offset="99.94%" />
+                        </linearGradient>
+                        <linearGradient x1="50%" y1=".779%" x2="50%" y2="100%" id="d">
+                            <stop stop-color="#0989B4" stop-opacity="0" offset="0%" />
+                            <stop stop-color="#53FFEE" offset="99.94%" />
+                        </linearGradient>
+                        <path id="a" d="M0 0h350v140H0z" />
+                    </defs>
+                    <g fill="none" fill-rule="evenodd">
+                        <mask id="b" fill="#fff">
+                            <use xlink:href="#a" />
+                        </mask>
+                        <use fill="#41CBD3" xlink:href="#a" />
+                        <g mask="url(#b)" opacity=".5">
+                            <g transform="translate(-11 -4)">
+                                <ellipse fill="url(#c)" transform="rotate(90 60.479 14.8)" cx="60.479" cy="14.8"
+                                    rx="14.8" ry="14.834" />
+                                <ellipse fill="url(#d)" transform="rotate(180 14.834 14.8)" cx="14.834" cy="14.8"
+                                    rx="14.834" ry="14.8" />
+                                <ellipse fill="url(#d)" cx="151.767" cy="14.8" rx="14.834" ry="14.8" />
+                                <ellipse fill="url(#c)" transform="rotate(-90 106.123 14.8)" cx="106.123" cy="14.8"
+                                    rx="14.8" ry="14.834" />
+                                <ellipse fill="url(#c)" transform="rotate(90 243.055 14.8)" cx="243.055" cy="14.8"
+                                    rx="14.8" ry="14.834" />
+                                <ellipse fill="url(#d)" transform="rotate(180 197.411 14.8)" cx="197.411" cy="14.8"
+                                    rx="14.834" ry="14.8" />
+                                <ellipse fill="url(#d)" cx="334.344" cy="14.8" rx="14.834" ry="14.8" />
+                                <ellipse fill="url(#c)" transform="rotate(-90 288.7 14.8)" cx="288.699" cy="14.8"
+                                    rx="14.8" ry="14.834" />
+                            </g>
+                            <g transform="translate(-11 91.63)">
+                                <ellipse fill="url(#c)" transform="rotate(90 60.479 14.8)" cx="60.479" cy="14.8"
+                                    rx="14.8" ry="14.834" />
+                                <ellipse fill="url(#d)" transform="rotate(180 14.834 14.8)" cx="14.834" cy="14.8"
+                                    rx="14.834" ry="14.8" />
+                                <ellipse fill="url(#d)" cx="151.767" cy="14.8" rx="14.834" ry="14.8" />
+                                <ellipse fill="url(#c)" transform="rotate(-90 106.123 14.8)" cx="106.123" cy="14.8"
+                                    rx="14.8" ry="14.834" />
+                                <ellipse fill="url(#c)" transform="rotate(90 243.055 14.8)" cx="243.055" cy="14.8"
+                                    rx="14.8" ry="14.834" />
+                                <ellipse fill="url(#d)" transform="rotate(180 197.411 14.8)" cx="197.411" cy="14.8"
+                                    rx="14.834" ry="14.8" />
+                                <ellipse fill="url(#d)" cx="334.344" cy="14.8" rx="14.834" ry="14.8" />
+                                <ellipse fill="url(#c)" transform="rotate(-90 288.7 14.8)" cx="288.699" cy="14.8"
+                                    rx="14.8" ry="14.834" />
+                            </g>
+                            <g transform="translate(-11 43.815)">
+                                <ellipse fill="url(#c)" transform="rotate(-90 60.479 14.8)" cx="60.479" cy="14.8"
+                                    rx="14.8" ry="14.834" />
+                                <ellipse fill="url(#d)" cx="14.834" cy="14.8" rx="14.834" ry="14.8" />
+                                <ellipse fill="url(#d)" cx="151.767" cy="14.8" rx="14.834" ry="14.8" />
+                                <ellipse fill="url(#c)" transform="rotate(90 106.123 14.8)" cx="106.123" cy="14.8"
+                                    rx="14.8" ry="14.834" />
+                                <ellipse fill="url(#c)" transform="rotate(-90 243.055 14.8)" cx="243.055" cy="14.8"
+                                    rx="14.8" ry="14.834" />
+                                <ellipse fill="url(#d)" cx="197.411" cy="14.8" rx="14.834" ry="14.8" />
+                                <ellipse fill="url(#d)" cx="334.344" cy="14.8" rx="14.834" ry="14.8" />
+                                <ellipse fill="url(#c)" transform="rotate(90 288.7 14.8)" cx="288.699" cy="14.8"
+                                    rx="14.8" ry="14.834" />
+                            </g>
+                            <g transform="translate(11.822 18.77)">
+                                <ellipse fill="url(#c)" transform="rotate(90 60.479 14.8)" cx="60.479" cy="14.8"
+                                    rx="14.8" ry="14.834" />
+                                <ellipse fill="url(#d)" transform="rotate(180 14.834 14.8)" cx="14.834" cy="14.8"
+                                    rx="14.834" ry="14.8" />
+                                <ellipse fill="url(#d)" cx="151.767" cy="14.8" rx="14.834" ry="14.8" />
+                                <ellipse fill="url(#c)" transform="rotate(-90 106.123 14.8)" cx="106.123" cy="14.8"
+                                    rx="14.8" ry="14.834" />
+                                <ellipse fill="url(#c)" transform="rotate(90 243.055 14.8)" cx="243.055" cy="14.8"
+                                    rx="14.8" ry="14.834" />
+                                <ellipse fill="url(#d)" transform="rotate(180 197.411 14.8)" cx="197.411" cy="14.8"
+                                    rx="14.834" ry="14.8" />
+                                <ellipse fill="url(#d)" cx="334.344" cy="14.8" rx="14.834" ry="14.8" />
+                                <ellipse fill="url(#c)" transform="rotate(-90 288.7 14.8)" cx="288.699" cy="14.8"
+                                    rx="14.8" ry="14.834" />
+                            </g>
+                            <g transform="translate(11.822 114.4)">
+                                <ellipse fill="url(#c)" transform="rotate(90 60.479 14.8)" cx="60.479" cy="14.8"
+                                    rx="14.8" ry="14.834" />
+                                <ellipse fill="url(#d)" transform="rotate(180 14.834 14.8)" cx="14.834" cy="14.8"
+                                    rx="14.834" ry="14.8" />
+                                <ellipse fill="url(#d)" cx="151.767" cy="14.8" rx="14.834" ry="14.8" />
+                                <ellipse fill="url(#c)" transform="rotate(-90 106.123 14.8)" cx="106.123" cy="14.8"
+                                    rx="14.8" ry="14.834" />
+                                <ellipse fill="url(#c)" transform="rotate(90 243.055 14.8)" cx="243.055" cy="14.8"
+                                    rx="14.8" ry="14.834" />
+                                <ellipse fill="url(#d)" transform="rotate(180 197.411 14.8)" cx="197.411" cy="14.8"
+                                    rx="14.834" ry="14.8" />
+                                <ellipse fill="url(#d)" cx="334.344" cy="14.8" rx="14.834" ry="14.8" />
+                                <ellipse fill="url(#c)" transform="rotate(-90 288.7 14.8)" cx="288.699" cy="14.8"
+                                    rx="14.8" ry="14.834" />
+                            </g>
+                            <g transform="translate(11.822 66.585)">
+                                <ellipse fill="url(#c)" transform="rotate(-90 60.479 14.8)" cx="60.479" cy="14.8"
+                                    rx="14.8" ry="14.834" />
+                                <ellipse fill="url(#d)" cx="14.834" cy="14.8" rx="14.834" ry="14.8" />
+                                <ellipse fill="url(#d)" cx="151.767" cy="14.8" rx="14.834" ry="14.8" />
+                                <ellipse fill="url(#c)" transform="rotate(90 106.123 14.8)" cx="106.123" cy="14.8"
+                                    rx="14.8" ry="14.834" />
+                                <ellipse fill="url(#c)" transform="rotate(-90 243.055 14.8)" cx="243.055" cy="14.8"
+                                    rx="14.8" ry="14.834" />
+                                <ellipse fill="url(#d)" cx="197.411" cy="14.8" rx="14.834" ry="14.8" />
+                                <ellipse fill="url(#d)" cx="334.344" cy="14.8" rx="14.834" ry="14.8" />
+                                <ellipse fill="url(#c)" transform="rotate(90 288.7 14.8)" cx="288.699" cy="14.8"
+                                    rx="14.8" ry="14.834" />
+                            </g>
+                        </g>
+                    </g>
+                </svg>
+            </div>
+
+            <div class="df jc-center">
+                <img class="img-pro" src="images/image-victor.jpg" alt="">
+            </div>
+
+
+            <div class="df align-item-center flex-column card-body" >
+                <div class=" df align-item-center">
+                    <h2>Victor Crest</h2> <p>26</p>
+                </div>
+                <div >
+                    <p>London</p>
+                </div>
+
+            </div>
+
+            <div class="df jc-around card-footer">
+                <div class="df flex-column">
+                    <h1>80K</h1>
+                    <p>Followers</p>
+
+
+                </div>
+
+                <div class="df flex-column">
+                    <h1>80K</h1>
+                    <p>Followers</p>
+
+
+                </div>
+
+                <div class="df flex-column">
+                    <h1>80K</h1>
+                    <p>Followers</p>
+
+
+                </div>
+            </div>
+
+
+        </div>
+
+
+
+
+    </div>
+
+
 </body>
+
 </html>
