--- a/Challenge3/index.html
+++ b/Challenge3/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="images/favicon-32x32.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,10 +19,11 @@
 
 
     <div class="container">
+        
 
         <div class="card card-first">
 
-            <div class="card-header" >
+            <div class="card-header">
                 <svg width="350" height="140" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink">
                     <defs>
@@ -145,34 +147,29 @@
 
             <div class="df align-item-center flex-column card-body" >
                 <div class=" df align-item-center">
-                    <h2>Victor Crest</h2> <p>26</p>
+                    <p class="name text-padd">Victor Crest</p>
+                    <p class="age text-padd">26</p>
                 </div>
-                <div >
-                    <p>London</p>
+                <div>
+                    <p class="city">London</p>
                 </div>
 
             </div>
 
-            <div class="df jc-around card-footer">
-                <div class="df flex-column">
-                    <h1>80K</h1>
-                    <p>Followers</p>
-
-
+            <div class="df  jc-around card-footer" >
+                <div class="df align-item-center flex-column">
+                    <p class="name">80K</p>
+                    <p class="state">Followers</p>
                 </div>
 
-                <div class="df flex-column">
-                    <h1>80K</h1>
-                    <p>Followers</p>
-
-
+                <div class="df align-item-center flex-column">
+                    <p class="name">80K</p>
+                    <p class="state">Followers</p>
                 </div>
 
-                <div class="df flex-column">
-                    <h1>80K</h1>
-                    <p>Followers</p>
-
-
+                <div class="df align-item-center flex-column">
+                    <p class="name">80K</p>
+                    <p class="state">Followers</p>
                 </div>
             </div>
 
