--- a/Challenge3/index.html
+++ b/Challenge3/index.html
@@ -18,7 +18,7 @@
 <body>
 
 
-    <div class="container">
+    <div class="container align-item-center jc-center df">
         
 
         <div class="card card-first">
