--- a/Apple/index.html
+++ b/Apple/index.html
@@ -9,11 +9,13 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="image/Apple_logo_grey.jpg">
 
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap" rel="stylesheet">
     <link href="fontaw/css/all.css" rel="stylesheet">
+
 </head>
 
     <body>
@@ -64,7 +66,6 @@
                     </div>
                 </div>
 
-
                 <!-- Second navbar -->
                 <div class="navbar-s navbar-item-sub center df navbar-light">
                     <span>
@@ -78,7 +79,7 @@
 
         <main>
 
-            <section class="">
+            <section class="section-white">
                 <div class="df text-center flex-col bg-img1 ">
 
                     <div>
@@ -116,8 +117,7 @@
                 </div>
             </section>
 
-
-            <section class="img-wide divider">
+            <section class="section-dark-1 img-wide divider">
                 <div class="df text-center flex-col bg-img2 white-text">
                     <h2 class="title">iPhone 12 Pro</h2>
                     <p class="title-sub">It’s a leap year.</p>
@@ -152,7 +152,7 @@
 
             </section>
 
-            <section class="img-wide divider">
+            <section class="section-dark-2 img-wide divider">
                 <div class="df text-center flex-col bg-img3 white-text white-text">
                     <div>
                         <h2 class="title">iPad Pro</h2>
@@ -181,8 +181,7 @@
                 </div>
             </section>
 
-
-            <section class=" grid-6">
+            <section class="grid">
                 <div class="grid-container ">
 
                     <div class="grid-1-item grid-item ">
@@ -391,7 +390,7 @@
         </main>
 
         <footer>
-            <div class="  footer">
+            <div class="footer">
                 <div class="">
                     <ul class="footer-border" style="padding-bottom: 11px;">
                         <li>
