--- a/Apple/index.html
+++ b/Apple/index.html
@@ -10,11 +10,8 @@
     <link rel="icon" href="image/Apple_logo_grey.jpg">
 
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap" rel="stylesheet">
     <link href="fontaw/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="fonts.css">
 
 </head>
 
