--- a/Challenge3/index.html
+++ b/Challenge3/index.html
@@ -163,13 +163,13 @@
                 </div>
 
                 <div class="df align-item-center flex-column">
-                    <p class="name">80K</p>
-                    <p class="state">Followers</p>
+                    <p class="name">803K</p>
+                    <p class="state">Likes</p>
                 </div>
 
                 <div class="df align-item-center flex-column">
-                    <p class="name">80K</p>
-                    <p class="state">Followers</p>
+                    <p class="name">1.4K</p>
+                    <p class="state">Photos</p>
                 </div>
             </div>
 
