--- a/Apple/index.html
+++ b/Apple/index.html
@@ -81,7 +81,7 @@
 
                     <div>
                         <h2 class="title">iPhone 12</h2>
-                        <p class="title-sub">Blast past fast.</p>
+                        <h3 class="title-sub">Blast past fast.</h3>
                         <div class="title-body">
                             <p>
                                 From $29.12/mo. for 24 mo. or $699 before trade‑in<sup class="">1</sup>
@@ -117,7 +117,7 @@
             <section class="section-dark-1 img-wide divider">
                 <div class="df text-center flex-col bg-img2 white-text">
                     <h2 class="title">iPhone 12 Pro</h2>
-                    <p class="title-sub">It’s a leap year.</p>
+                    <h3 class="title-sub">It’s a leap year.</h3>
                     <div class="title-body">
                         <p>
                             From $41.62/mo. for 24 mo. or $999 before trade‑in<sup class="">1</sup>
@@ -153,7 +153,7 @@
                 <div class="df text-center flex-col bg-img3 white-text white-text">
                     <div>
                         <h2 class="title">iPad Pro</h2>
-                        <p class="title-sub">Supercharged by the Apple M1 chip.</p>
+                        <h3 class="title-sub">Supercharged by the Apple M1 chip.</h3>
 
                         <div class="title-link ">
 
@@ -185,7 +185,7 @@
                         <div class=" child1 df text-center flex-col">
                             <div>
                                 <h2 class="title">iMac</h2>
-                                <p class="title-sub">Say hello.</p>
+                                <h3 class="title-sub">Say hello.</h3>
                                 <div class="title-link ">
 
                                     <div class="df center">
@@ -221,7 +221,7 @@
 
                                 </h2>
 
-                                <p class="title-sub">The future of health is on your wrist.</p>
+                                <3 class="title-sub">The future of health is on your wrist.</3>
                                 <div class="title-link ">
 
                                     <div class="df center">
@@ -286,7 +286,7 @@
 
                                 </h2>
 
-                                <p class="title-sub">Ultimate Rivals: The Court. Play now.</p>
+                                <h3 class="title-sub">Ultimate Rivals: The Court. Play now.</h3>
                                 <div class="title-link ">
 
                                     <div class="df center">
@@ -318,9 +318,9 @@
                                 <h2 class="title">
                                     <img src="image/card-logo.png" alt="">
                                 </h2>
-                                <p class="title-sub">Get up 3% Daily Cash back
+                                <h3 class="title-sub">Get up 3% Daily Cash back
                                     <br> with every purchase.
-                                </p>
+                                </h3>
                                 <div class="title-link ">
 
                                     <div class="df center">
