--- a/Apple/index.html
+++ b/Apple/index.html
@@ -11,7 +11,7 @@
 
 
     <link href="fontaw/css/all.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/fonts.css">
+    <!-- <link rel="stylesheet" href="css/fonts.css"> -->
 
 </head>
 
