--- a/Apple/index.html
+++ b/Apple/index.html
@@ -11,7 +11,7 @@
 
 
     <link href="fontaw/css/all.css" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="css/fonts.css"> -->
+    <link rel="stylesheet" href="fonts.css">
 
 </head>
 
@@ -75,6 +75,37 @@
     </header>
 
     <main>
+
+        <!-- <section>
+            <div class="df text-center flex-col bg-img3 white-text white-text">
+                <div>
+                    <h2 class="title">iPad Pro</h2>
+                    <h3 class="title-sub">Supercharged by the Apple M1 chip.</h3>
+
+                    <div class="title-link ">
+
+                        <div class="df center">
+                            <div>
+                                <a style="color: #2997ff;" class="link-blue" href="#">Learn more
+                                    <span class="right"></span>
+                                </a>
+
+                            </div>
+
+                            <div>
+                                <a style="color: #2997ff;" class="link-blue" href="#">Buy
+                                    <span class="right" href="#"></span>
+                                </a>
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+         
+
+        </section> -->
 
 
         <section class="section-white">
