--- a/Apple/index.html
+++ b/Apple/index.html
@@ -220,12 +220,10 @@
                         <div>
 
                             <h2 class="title">
-
                                 <img class="watch-logo" src="image/logo-watch.png" alt="">
-
                             </h2>
 
-                            <3 class="title-sub">The future of health is on your wrist.</3>
+                            <h3 class="title-sub">The future of health is on your wrist.</h3>
                             <div class="title-link ">
 
                                 <div class="df center">
