--- a/Apple/index.html
+++ b/Apple/index.html
@@ -79,7 +79,7 @@
         <section class="section-white">
             <div class="df text-center flex-col bg-img1 ">
 
-                <div>
+                <div class="testcontent">
                     <h2 class="title">iPhone 12</h2>
                     <h3 class="title-sub">Blast past fast.</h3>
                     <div class="title-body">
@@ -217,7 +217,7 @@
 
                 <div class="grid-2-item grid-item">
                     <div class="child2 df text-center flex-col white-text">
-                        <div>
+                        <div >
 
                             <h2 class="title">
                                 <img class="watch-logo" src="image/logo-watch.png" alt="">
