--- a/Apple/index.html
+++ b/Apple/index.html
@@ -347,7 +347,7 @@
                     </div>
                 </div>
                 <div class="grid-6-item grid-item">
-                    <div class="child6 df text-center flex-col white-text footbal">
+                    <div class="child6 df text-center flex-col white-text align-items-center jc-between">
 
                         <div style="margin-top: 60px;">
                             <img class="img-tv" src="image/tv+.png" alt="">
