--- a/Apple/index.html
+++ b/Apple/index.html
@@ -77,36 +77,36 @@
         <section class="section-white">
             <div class="df text-center flex-col bg-img1 ">
 
-                    <h2 class="title">iPhone 12</h2>
-                    <h3 class="title-sub">Blast past fast.</h3>
-                    <div class="title-body">
-                        <p>
-                            From $29.12/mo. for 24 mo. or $699 before trade‑in<sup class="">1</sup>
-                        </p>
-                        <p class="carrier">Buy directly from Apple with special carrier offers</p>
-                    </div>
+                <h2 class="title">iPhone 12</h2>
+                <h3 class="title-sub">Blast past fast.</h3>
+                <div class="title-body">
+                    <p>
+                        From $29.12/mo. for 24 mo. or $699 before trade‑in<sup class="">1</sup>
+                    </p>
+                    <p class="carrier">Buy directly from Apple with special carrier offers</p>
+                </div>
 
-                    <div class="title-link ">
+                <div class="title-link ">
 
-                        <div class="df center">
-                            <div>
-                                <a class="link-blue" href="#">Learn more
-                                    <span class="right-white"></span>
-                                </a>
-
-                            </div>
-
-                            <div>
-                                <a class="link-blue" href="#">Buy
-                                    <span class="right-white" href="#"></span>
-                                </a>
-                            </div>
+                    <div class="df center">
+                        <div>
+                            <a class="link-blue" href="#">Learn more
+                                <span class="right-white"></span>
+                            </a>
 
                         </div>
 
+                        <div>
+                            <a class="link-blue" href="#">Buy
+                                <span class="right-white" href="#"></span>
+                            </a>
+                        </div>
 
                     </div>
-                
+
+
+                </div>
+
 
             </div>
         </section>
@@ -352,9 +352,8 @@
 
                             <div class="df  title-link " style="justify-content: center; ">
                                 <div class=" ">
-                                    <a href="#" class="link-blue" style="color: #06c;padding: 0; margin: 0;">
+                                    <a href="#" class="link-blue watch" style="color: #06c;padding: 0; margin: 0;">
                                         Watch now
-
                                     </a>
 
 
@@ -491,7 +490,6 @@
                     </li>
 
                     <li>
-
                         Apple TV+ is $4.99/month after free trial. One subscription per Family Sharing group. Offer good
                         for 3
                         months after eligible device activation. Plan automatically renews until cancelled. Restrictions
@@ -500,11 +498,11 @@
                     </li>
                 </ul>
 
-                <div class="footer-body df jc-between" style="padding-top:20px; width: 100%;">
+                <div class="footer-body df jc-between" >
 
-                    <div class="" style="width: 20%;">
+                    <div class="footer-col">
                         <div class="df flex-col">
-                            <h5 style="font-size: 12px;" class="footer-head">Shop and Learn</h5>
+                            <h5 class="footer-head">Shop and Learn</h5>
                             <a href="#">Mac</a>
                             <a href="#">iPad</a>
                             <a href="#">iPhone</a>
@@ -520,7 +518,7 @@
 
                     </div>
 
-                    <div style="width: 20%;">
+                    <div class="footer-col">
                         <div class="df flex-col">
                             <h5>Services</h5>
                             <a href="#">Apple Music</a>
@@ -546,7 +544,7 @@
 
                     </div>
 
-                    <div style="width: 20%;">
+                    <div class="footer-col">
                         <div class="df flex-col">
                             <h5> Apple Store</h5>
                             <a href="#">Find a Store</a>
@@ -563,7 +561,7 @@
 
                     </div>
 
-                    <div style="width: 20%;">
+                    <div class="footer-col">
                         <div class="df flex-col">
                             <h5> For Business</h5>
                             <a href="#">Apple and Business</a>
@@ -595,7 +593,7 @@
 
                     </div>
 
-                    <div style="width: 20%;">
+                    <div class="footer-col">
                         <div class="df flex-col">
                             <h5>Apple Values</h5>
                             <a href="#">Accessibility</a>
@@ -626,7 +624,7 @@
             </div>
 
             <!-- footer-content-second -->
-            <section class="footer-sub" >
+            <section class="footer-sub">
                 <p class="footer-fot footer-border">More ways to shop: <a href="#">Find an Apple Store</a> or <a
                         href="#">other
                         retailer</a>
