--- a/challenge5/1.html
+++ b/challenge5/1.html
@@ -1,21 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet"  href="">
-    <!-- <link rel="icon" href="image/favicon-32x32.png"> -->
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="images/favicon-32x32.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
-    <div class="container">
+
+    <div class="container rows">
+
+
+        <div class="row1 ">
+            <div class="col-1 title">
+                <h1> 10,000+ of our users love our products.</h1>
+                <p>
+                    We only provide great products combined with excellent customer service.
+                    See what our satisfied customers are saying about our services
+                </p>
+            </div>
+
+            <div class="col-2 stars">
+                <div class="row-1 star">
+                    <img src="images/icon-star.svg" alt="">
+                    <img src="images/icon-star.svg" alt="">
+                    <img src="images/icon-star.svg" alt="">
+                    <img src="images/icon-star.svg" alt="">
+                    <img src="images/icon-star.svg" alt="">
+                    <p>Rated 5 Stars in Reviews</p>
+                </div>
+                <div class="row-2 star">
+                    <img src="images/icon-star.svg" alt="">
+                    <img src="images/icon-star.svg" alt="">
+                    <img src="images/icon-star.svg" alt="">
+                    <img src="images/icon-star.svg" alt="">
+                    <img src="images/icon-star.svg" alt="">
+                    <p>Rated 5 Stars in Report Guru</p>
+                </div>
+                <div class="row-3 star">
+                    <img src="images/icon-star.svg" alt="">
+                    <img src="images/icon-star.svg" alt="">
+                    <img src="images/icon-star.svg" alt="">
+                    <img src="images/icon-star.svg" alt="">
+                    <img src="images/icon-star.svg" alt="">
+                    <p>Rated 5 Stars in BestTech</p>
+                </div>
+            </div>
+
+        </div>
+
+
+        <!-- <div class="row2 ">
+            <div class="col-1 ">d</div>
+            <div class="col-2">s</div>
+            <div class="col-3">s</div>
+        </div> -->
+
 
     </div>
 
-    
-    
+
+
 </body>
+
 </html>
