--- a/challenge5/1.html
+++ b/challenge5/1.html
@@ -16,15 +16,15 @@
 <body>
 
 
-    <div class="container rows">
+    <div class="container">
 
-
-        <div class="row1 ">
+        <div class="row1">
             <div class="col-1 title">
                 <h1> 10,000+ of our users love our products.</h1>
                 <p>
-                    We only provide great products combined with excellent customer service.
-                    See what our satisfied customers are saying about our services
+                    We only provide great products combined with excellent
+                    customer service.See what our
+                    satisfied customers are saying about our services
                 </p>
             </div>
 
@@ -58,12 +58,69 @@
         </div>
 
 
-        <!-- <div class="row2 ">
-            <div class="col-1 ">d</div>
-            <div class="col-2">s</div>
-            <div class="col-3">s</div>
-        </div> -->
+        <div class="row2">
+            <div class="col-1 card-s">
 
+                <div class="card">
+                    <div class="card-header">
+                        <img src="images/image-colton.jpg" alt="">
+                        <div class="card-title">
+                            <p>Colton Smith </p>
+                            <p>Verified Buyer</p>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <p>
+                            " We needed the same printed design as the one we had ordered a week prior.
+                            Not only did they find the original order, but we also received it in time.
+                            Excellent!"
+                        </p>
+
+
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-2 card-s">
+                <div class="card">
+                    <div class="card-header">
+                        <img src="images/image-irene.jpg" alt="">
+                        <div class="card-title">
+                            <p> Irene Roberts  </p>
+                            <p> Verified Buyer</p>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <p>
+                            "Customer service is always excellent and very quick turn around. Completely
+                            delighted with the simplicity of the purchase and the speed of delivery."                        
+                        </p>
+
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-3 card-s">
+                <div class="card">
+                    <div class="card-header">
+                        <img src="images/image-anne.jpg" alt="">
+                        <div class="card-title">
+                            <p>Anne Wallace  </p>
+                            <p>VVerified Buyer</p>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <p>
+                            "Put an order with this company and can only praise them for the very high
+                            standard. Will definitely use them again and recommend them to everyone!"
+                        
+                        </p>
+
+
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </div>
 
