--- a/challenge5/1.html
+++ b/challenge5/1.html
@@ -18,6 +18,7 @@
 
     <div class="container">
 
+       <div class="rows">
         <div class="row1">
             <div class="col-1 title">
                 <h1> 10,000+ of our users love our products.</h1>
@@ -106,7 +107,7 @@
                         <img src="images/image-anne.jpg" alt="">
                         <div class="card-title">
                             <p>Anne Wallace  </p>
-                            <p>VVerified Buyer</p>
+                            <p>Verified Buyer</p>
                         </div>
                     </div>
                     <div class="card-body">
@@ -121,6 +122,7 @@
                 </div>
             </div>
         </div>
+       </div>
 
     </div>
 
