--- a/google/index.html
+++ b/google/index.html
@@ -16,6 +16,12 @@
     <header>
         <!-- navbar -->
         <section>
+
+            <div class="parent">
+                <div class="child">
+                    hi
+                </div>
+            </div>
             <div class="df navbar" style="padding-top: 4px;">
 
                 <!-- left -->
@@ -86,33 +92,33 @@
         </section>
 
         <!-- Search box -->
-       <section>
-        <div class="border-input shadow-input  center login-pass" style="margin-bottom: 40px">
+        <section>
+            <div class="border-input shadow-input  center login-pass" style="margin-bottom: 40px">
 
-            <div class="">
+                <div class="">
 
-                <svg class="search-icon" fill="gray" height="20px" width="20px" focusable="false"
-                    xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                    <path
-                        d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z">
-                    </path>
-                </svg>
+                    <svg class="search-icon" fill="gray" height="20px" width="20px" focusable="false"
+                        xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                        <path
+                            d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z">
+                        </path>
+                    </svg>
 
-                <input type="input" class="s input-as" id="" placeholder="">
+                    <input type="input" class="s input-as" id="" placeholder="">
 
 
 
-                <div class="tooltip">
-                    <a href="#">
-                        <img class="mic-icon" height="25px" width="17px" alt="microphone" src="img/mic.png">
-                        <div class="triangle"></div>
-                        <span class="tooltiptext">Search by voice</span>
-                    </a>
+                    <div class="tooltip">
+                        <a href="#">
+                            <img class="mic-icon" height="25px" width="17px" alt="microphone" src="img/mic.png">
+                            <div class="triangle"></div>
+                            <span class="tooltiptext">Search by voice</span>
+                        </a>
+                    </div>
+
                 </div>
-
             </div>
-        </div>
-       </section>
+        </section>
 
         <!-- buttons -->
         <section>
