--- a/vue/main.html
+++ b/vue/main.html
@@ -40,23 +40,20 @@
 
         <hr />
 
-        <template v-if="ok">
+        <!-- <template v-if="ok">
             <h1>Title</h1>
             <p>paragraph 1</p>
             <p>paragraph 2</p>
-        </template>
+        </template> -->
 
-        <h1 v-show="ok">Hello!</h1>
-        <h1 v-show="!ok">Hello!</h1>
+        <!-- <h1 v-show="ok">Hello!</h1>
+        <h1 v-show="!ok">Hello!</h1> -->
 
-        <div v-if="isVisible" class="box"></div>
+        <!-- <div v-if="isVisible" class="box"></div>
         <div v-else-if="isVisible2" class="box two"></div>
-        <div v-else class="box three"></div>
+        <div v-else class="box three"></div> -->
 
-        <!-- <button @click="isVisible = true">Show box</button>
-        <div v-if="isVisible" class="box"></div> -->
-
-        <button @click="isVisible = !isVisible">Show box</button>
+        <button @click="isVisible = !isVisible">Visivle</button>
         <div v-if="isVisible" class="box"></div>
 
         <hr>
